kqed_dev4/src/objects/WGBH_PB5_UPLOAD__c.object
<CustomObject>
    <fields>
        <fullName>PB5_NO_PHONE_PREFERRED__c</fullName>
        <label>PB5_NO_PHONE_PREFERRED</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ORGANIZATION_NAME__c</fullName>
        <label>PB5_ORGANIZATION_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_OriginalID__c</fullName>
        <label>PB5_OriginalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENTS_IN_SCHEDULE__c</fullName>
        <description>IF PAYMENT FREQUENCY: A=1, M=12, Q=4, B=6, S=2</description>
        <label>PB5_PAYMENTS_IN_SCHEDULE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENT_AMOUNT__c</fullName>
        <description>THE AMOUNT OF THE PARTICULAR PAYMENT. MAPS TO: UL_BATCH_DETAIL.PAYMENT_AMOUNT</description>
        <label>PB5_PAYMENT_AMOUNT</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENT_FREQUENCY__c</fullName>
        <description>(A)NNUAL, (M)ONTHLY, (Q)UARTERLY, (B)I-ANNUALLY, (S)EMI-ANNUALLY</description>
        <label>PB5_PAYMENT_FREQUENCY</label>
        <picklist>
            <picklistValues>
                <fullName>Anual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PAYMENT_METHOD__c</fullName>
        <description>METHOD OF PAYMENT.  Kimbia: (KA, KD, KM, KV) Convio (WA, WD, WM, WV) maps to: UL_BATCH_DETAIL.PAYMENT_METHOD</description>
        <label>PB5_PAYMENT_METHOD</label>
        <picklist>
            <picklistValues>
                <fullName>Cybersource American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cybersource Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cybersource Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cybersource Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage Unknown Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Fund Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PLEDGE_AMOUNT__c</fullName>
        <description>THE AMOUNT OF THE PLEDGE/OPPORTUNITY. MAPS TO: UL_BATCH_DETAIL.PLEDGE_AMOUNT</description>
        <label>PB5_PLEDGE_AMOUNT</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_PLEDGE_CTIME__c</fullName>
        <description>TIMESTAMP OF WHEN PLEDGE WAS MADE. MAPS TO UL_BATCH_DETAIL.PLEDGE_CTIME</description>
        <label>PB5_PLEDGE_CTIME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_PLEDGE_NUMBER__c</fullName>
        <description>THE SFDC OPPORTUNITY ID</description>
        <label>PB5_PLEDGE_NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_PREM_10_TO_RECIP__c</fullName>
        <label>PB5_PREM_10_TO_RECIP</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PREM_11_TO_RECIP__c</fullName>
        <label>PB5_PREM_11_TO_RECIP</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PREM_12_TO_RECIP__c</fullName>
        <label>PB5_PREM_12_TO_RECIP</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_PaymentBillingAddress__c</fullName>
        <label>PB5_PaymentBillingAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_Payment_ModifyDate__c</fullName>
        <label>PB5_Payment.ModifyDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_PurchaserID__c</fullName>
        <label>PB5_PurchaserID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RECIP_ACCOUNT_IDENTIFIER_10__c</fullName>
        <label>PB5_RECIP_ACCOUNT_IDENTIFIER_10</label>
        <picklist>
            <picklistValues>
                <fullName>Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_RECIP_ACCOUNT_IDENTIFIER_11__c</fullName>
        <label>PB5_RECIP_ACCOUNT_IDENTIFIER_11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RECIP_ACCOUNT_IDENTIFIER_1__c</fullName>
        <label>PB5_RECIP_ACCOUNT_IDENTIFIER_1</label>
        <picklist>
            <picklistValues>
                <fullName>Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_RECORD_TYPE__c</fullName>
        <description>Vendor through which the transaction is being processed: Maps to UL_ACCOUNTS.ID_TYPE. Lookup via ETL Job</description>
        <label>PB5_RECORD_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_REQUIRES_REVIEW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this record require review before being processed?</description>
        <label>PB5_REQUIRES_REVIEW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_RESPONSE_CATEGORY__c</fullName>
        <label>PB5_RESPONSE_CATEGORY</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_RESPONSE_CDATE__c</fullName>
        <label>PB5_RESPONSE_CDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_RESPONSE_TYPE__c</fullName>
        <label>PB5_RESPONSE_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_Recognition_SenderAddress__c</fullName>
        <label>PB5_Recognition_SenderAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_Recognition_SenderName__c</fullName>
        <label>PB5_Recognition_SenderName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_RecurringPaymentDuration__c</fullName>
        <label>PB5_RecurringPaymentDuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SFDC_ID__c</fullName>
        <description>Salesforce ID of household, contact or organization maps to: UL_ACCOUNTS.ACCOUNT_ID</description>
        <label>PB5_SFDC_ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_ProductID__c</fullName>
        <label>PB5_SHIP_ProductID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_CITY__c</fullName>
        <label>PB5_SHIP_TO_CITY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_EXTRA_LINE_1__c</fullName>
        <label>PB5_SHIP_TO_EXTRA_LINE_1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_FIRST_NAME__c</fullName>
        <label>PB5_SHIP_TO_FIRST_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_LAST_NAME__c</fullName>
        <label>PB5_SHIP_TO_LAST_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_MIDDLE_NAME__c</fullName>
        <label>PB5_SHIP_TO_MIDDLE_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_STATE__c</fullName>
        <label>PB5_SHIP_TO_STATE</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_STREET_1__c</fullName>
        <label>PB5_SHIP_TO_STREET_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_STREET_2__c</fullName>
        <label>PB5_SHIP_TO_STREET2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_SUFFIX__c</fullName>
        <label>PB5_SHIP_TO_SUFFIX</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_TITLE__c</fullName>
        <label>PB5_SHIP_TO_TITLE</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_ZIP_CODE__c</fullName>
        <label>PB5_SHIP_TO_ZIP_CODE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_ZIP_EXTENSION__c</fullName>
        <label>PB5_SHIP_TO_ZIP_EXTENSION</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB5_SOURCE__c</fullName>
        <description>SOURCE CODE OF PLEDGE. MAPS TOL UL_BATCH_DETAIL.SOURCE</description>
        <label>PB5_SOURCE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_START_CDATE_10__c</fullName>
        <label>PB5_START_CDATE_10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_START_CDATE_1__c</fullName>
        <label>PB5_START_CDATE_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_START_CDATE_2__c</fullName>
        <label>PB5_START_CDATE_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_STATE__c</fullName>
        <description>State of preferred Address</description>
        <label>PB5_STATE</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_STATION_SOURCE__c</fullName>
        <description>Which station is the upload for</description>
        <label>PB5_STATION_SOURCE</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_STATION_SUPPORT__c</fullName>
        <description>THE LEAD SOURCE. MAPS TO: UL_BATCH_DETAIL.STATION_SUPPORT. ASSIGNED BY PARSING PB5_SOURCE IF NO VALUE</description>
        <label>PB5_STATION_SUPPORT</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television and Classical RadioC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television and Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_STREET_1__c</fullName>
        <description>Name of street in preferred address. Maps to: UL_ADDRESSES.STEET_NAME</description>
        <label>PB5_STREET_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SUFFIX_2__c</fullName>
        <label>PB5_SUFFIX_2</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.D.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R.N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SUFFIX__c</fullName>
        <description>Suffix of name on household, contact, org. Maps to UL_NAMES.SUFFIX</description>
        <label>PB5_SUFFIX</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.D.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R.N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ShipConfigID__c</fullName>
        <label>PB5_ShipConfigID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ShipConfig_Value__c</fullName>
        <label>PB5_ShipConfig_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_Stage__c</fullName>
        <label>PB5 Stage</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_EXTENSION_1__c</fullName>
        <description>PREFERRED PHOEN EXTENSION. MAPS TO: UL_TELEPHONES.TELEPHONE_EXTENSION</description>
        <label>PB5_TELEPHONE_EXTENSION_1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_EXTENSION_2__c</fullName>
        <description>The second phone number in the file</description>
        <label>PB5_TELEPHONE_EXTENSION_2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_NUMBER_1__c</fullName>
        <description>prefrred phone number. Maps to: UL_TELEPHONES.TELEPHONE_NUMBER</description>
        <label>PB5_TELEPHONE_NUMBER_1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_NUMBER_2__c</fullName>
        <description>The second telephone number in the file</description>
        <label>PB5_TELEPHONE_NUMBER_2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_TYPE_1__c</fullName>
        <description>PREFERRED PHONE TYPE. MAPS TO: UL_TELEPHONE.TELEPHONE_TYPE</description>
        <label>PB5_TELEPHONE_TYPE_1</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_TYPE_2__c</fullName>
        <description>The type of the second phone number in the file.</description>
        <label>PB5_TELEPHONE_TYPE_2</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>